Remove redundant code and improve consistency
Co-authored-by: snowy-snowdon <49162275+snowy-snowdon@users.noreply.github.com>